--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.0",
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
-    "mongoose": "^6.7.5"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.7.5",
+    "nodemailer": "^6.9.1"
   }
 }
